# philharmonic-api

./: CHANGELOG.md  Cargo.toml  README.md
src/: auth.rs  context.rs  error.rs  lib.rs  pagination.rs  scope.rs  store.rs  workflow.rs
src/middleware/: auth.rs  auth_placeholder.rs  authz.rs  authz_placeholder.rs  correlation_id.rs  mod.rs  rate_limit.rs  request_logging.rs  scope.rs
src/routes/: audit.rs  authorities.rs  endpoints.rs  identity.rs  memberships.rs  meta.rs  mint.rs  mod.rs  operator.rs  principals.rs  roles.rs  tenant.rs  whoami.rs  workflows.rs
tests/: audit_rate_admin.rs  auth_middleware.rs  authz_middleware.rs  correlation_id.rs  e2e_full_pipeline.rs  e2e_mysql.rs  endpoint_config.rs  error_envelope.rs  identity_crud.rs  middleware_chain.rs  token_mint.rs  workflow_endpoints.rs
tests/common/: mod.rs
