[package]
name = "philharmonic-api"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-api"
description = "Public HTTP API for the Philharmonic workflow orchestration system: tenant endpoints, ephemeral-token minting, workflow CRUD, policy management, audit log access."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
