[package]
name = "philharmonic-api"
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-api"
description = "Public HTTP API for the Philharmonic workflow orchestration system: tenant endpoints, ephemeral-token minting, workflow CRUD, policy management, audit log access."

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22"
http = "1.4.0"
philharmonic-policy = "0.2"
philharmonic-store = "0.1"
philharmonic-types = "0.3"
philharmonic-workflow = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
coset = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
ml-kem = "0.2"
philharmonic-connector-client = "0.1.0"
philharmonic-connector-common = "0.2.0"
philharmonic-connector-impl-api = "0.1.0"
philharmonic-connector-impl-vector-search = "0.1.0"
philharmonic-connector-service = "0.2.0"
philharmonic-store-sqlx-mysql = "0.1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serial_test = { version = "3", features = ["file_locks"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql"] }
tokio = { version = "1.52.1", features = ["test-util", "macros", "rt-multi-thread"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
